made corrections and moved about me box

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- hero/jumbotron -->
     <section class="hero">
       <img src="./assets/images/Cool Gorilla.jpeg"  width="" height="320" alt="">
-      <div class="hero-cta">
+      <div class="hero-cta" id="hero-cta">
         <h2>About ME</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente, laudantium delectus accusamus maxime ad sequi nam sed. Ad consectetur explicabo nemo architecto praesentium deserunt aspernatur officia minima totam minus?
@@ -100,6 +100,10 @@
     <!-- "Military Profile" end -->
 
 
+
+
+
+
     <!-- footer -->
     <footer>
       <h2> Made 🦍 by gms1980</h2>
@@ -109,5 +113,9 @@
       </div>
     </footer>
     <!-- footer end -->
+
+
+
+    
   </body>
 </html>
