--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a class="navbar-brand bg-info text-dark" href="#">Lorenantino</a>
         </div>
         <div class="float-end">
-            <a class="active border-bottom border-info text-info mr-3" href="#" id="active">About Me</a>
+            <a class="active border-bottom border-info text-info mr-3" id="active">About Me</a>
             <a class="border-bottom border-info text-info fontweight-bold" href="#" id="work">Work</a>
             <a class="border-bottom border-info text-info" href="#">Contact Me</a>
             <a class="border-bottom border-info text-info" href="#">Resume</a>
@@ -31,7 +31,6 @@
     <!-- hero/jumbotron -->
     <div class="jumbotron jumbotron-fluid">
        <div class="container mt-nt">
-
        <div class="float-end">
         <a class="bg-info text-dark px-2">Cool subtitle here!</a>
         <a class="" href="#"></a>
@@ -44,17 +43,16 @@
       <div class="container">
         <div class="row">
           <div class="col"> 
-          About Me         </div>
+          About Me </div>
           <div class="col">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, possimus quos animi tempore explicabo ipsa voluptatibus labore fuga ab id doloremque tempora ratione iure beatae accusamus quidem dignissimos libero. Exercitationem?</p>
           </div>
         </div>
      <!-- Work and Surf Report -->
-     <div class="container">
-      <div class="row">
-        <div class="col">
-          Work</div>
-          <div class="col-md-10">
+               <div class="container">
+             <div class="row">
+        <div class="col-4">Work</div>    
+          <div class="col-8">
           <img src="assets/images/wave.jpg" style="width:100%" alt="surfreport">   
         </div>
       </div>
@@ -65,33 +63,43 @@
         <div class="col">
           1 of 3</div>
            <div class="col-6">
-          <img src="assets/images/LED(1).jpeg" style=width:100% alt="LEDWALL">
+          <img src="assets/images/LED(1).jpeg" style=width:auto alt="LEDWALL">
         </div>
         <div class="col">
-          <img src="assets/computer screen.jpeg" style="width:100% "> 
+          <img src="assets/computer screen.jpeg" style="width:auto"> 
+        </div>
         </div>
       </div>
       <!-- Start Calculator and Runbuddy-->
+      
       <div class="container">
-        <div class="row">
-          <div class="col">
-            <img src="assets/images/LED(1).jpeg" style="width:100%" alt="LEDWALL">
-          </div>
-          <div class="col">
-            <img src="assets/images/hero-bg.jpg" style="width:100%"> 
-          </div>
+        <div class="row">              
+               <div class="col-sm">1 of 3</div>               
+               <div class="col-sm">
+                <img src="https://placehold.it/150x150?text=IMAGE" style="width:auto border-info" height="100px"> </div>
+              <div class="col-sm">
+            <img src="assets/images/hero-bg.jpg" style="width:auto" height="100px"> </div>
+                </div>  
         </div>
+      </div>
 
       <!--Footer-->
+      <div class="footer">
       <div class="container">
       <div class="row">
-        <div class="col">
-          1 of 3
+        <div class="col-md-4">
+          Contact 
+          Me
         </div>
-        <div class="col-6">
+        <div class="col-sm">
           2 of 3 (wider)
         </div>
-        <div class="col">
+        <div class="col-sm">
           3 of 3
         </div>
       </div>
+    </div>
+    </div>
+  </body>
+</head>
+  </html>
