--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  
     <link rel="Secondary Stylesheet" href="./assets/css/secondary-styles.cs">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-      
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CSS Portfolio</title>
   </head>
   <body>
@@ -53,7 +53,10 @@
              <div class="row">
         <div class="col-4">Work</div>    
           <div class="col-8">
-          <img src="assets/images/wave.jpg" style="width:100%" alt="surfreport">   
+          <!-- <img src="assets/images/wave.jpg" style="width:100%" alt="surfreport">    -->
+        <div class="waveimg">
+          <div class="wavebox"></div>
+        </div>
         </div>
       </div>
      </div>
@@ -87,7 +90,7 @@
       <div class="footer">
       <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           Contact 
           Me
         </div>
